Renamed subcube_cache* variables to cache*

--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -372,100 +372,97 @@ class LazySpaceTimeCube:
             raise ValueError("The cube_shape and subcube_shape must only contain positive integers.")
 
         # Ensure that cube_shape is divided evenly by subcube_shape or throw an error
-        subcube_cache_bands = divide_evenly(cube_bands, subcube_bands)
-        subcube_cache_rows  = divide_evenly(cube_rows, subcube_rows)
-        subcube_cache_cols  = divide_evenly(cube_cols, subcube_cols)
+        cache_bands = divide_evenly(cube_bands, subcube_bands)
+        cache_rows  = divide_evenly(cube_rows, subcube_rows)
+        cache_cols  = divide_evenly(cube_cols, subcube_cols)
 
-        # Store the cube metadata, subcube{,_cache}_shape, subcube_cache, and load_subcube functions for later
-        self.ndim                = 3
-        self.size                = cube_bands * cube_rows * cube_cols
-        self.shape               = cube_shape
-        self.subcube_shape       = subcube_shape
-        self.subcube_cache_shape = (subcube_cache_bands,
-                                    subcube_cache_rows,
-                                    subcube_cache_cols)
-        self.subcube_cache       = np.empty(self.subcube_cache_shape, dtype=object)
-        self.load_subcube        = load_subcube
+        # Store the cube metadata, subcube_shape, cache_shape, cache, and load_subcube functions for later
+        self.ndim          = 3
+        self.size          = cube_bands * cube_rows * cube_cols
+        self.shape         = cube_shape
+        self.subcube_shape = subcube_shape
+        self.cache_shape   = (cache_bands, cache_rows, cache_cols)
+        self.cache         = np.empty(self.cache_shape, dtype=object)
+        self.load_subcube  = load_subcube
 
 
-    def __getOrLoadSubcube(subcube_cache_t, subcube_cache_y, subcube_cache_x):
+    def __getOrLoadSubcube(cache_t, cache_y, cache_x):
         """
         Returns SpaceTimeCube
         """
-        subcube = self.subcube_cache[subcube_cache_t, subcube_cache_y, subcube_cache_x]
+        subcube = self.cache[cache_t, cache_y, cache_x]
         if subcube:
             return subcube
         else:
-            subcube = self.load_subcube((subcube_cache_t, subcube_cache_y, subcube_cache_x),
-                                        self.subcube_shape)
-            self.subcube_cache[subcube_cache_t, subcube_cache_y, subcube_cache_x] = subcube
+            subcube = self.load_subcube((cache_t, cache_y, cache_x), self.subcube_shape)
+            self.cache[cache_t, cache_y, cache_x] = subcube
             return subcube
 
 
     def get(self, t, y, x):
         (subcube_bands, subcube_rows, subcube_cols) = self.subcube_shape
-        (subcube_cache_t, subcube_t) = divmod(t, subcube_bands)
-        (subcube_cache_y, subcube_y) = divmod(y, subcube_rows)
-        (subcube_cache_x, subcube_x) = divmod(x, subcube_cols)
-        subcube = self.__getOrLoadSubcube(subcube_cache_t, subcube_cache_y, subcube_cache_x)
+        (cache_t, subcube_t) = divmod(t, subcube_bands)
+        (cache_y, subcube_y) = divmod(y, subcube_rows)
+        (cache_x, subcube_x) = divmod(x, subcube_cols)
+        subcube = self.__getOrLoadSubcube(cache_t, cache_y, cache_x)
         return subcube.get(subcube_t, subcube_y, subcube_x)
 
 
     # TODO: Add an optional temporal range
     def getTimeSeries(self, y, x):
-        (subcube_cache_bands, _, _) = self.subcube_cache_shape
+        (cache_bands, _, _) = self.cache_shape
         (_, subcube_rows, subcube_cols) = self.subcube_shape
-        (subcube_cache_y, subcube_y) = divmod(y, subcube_rows)
-        (subcube_cache_x, subcube_x) = divmod(x, subcube_cols)
+        (cache_y, subcube_y) = divmod(y, subcube_rows)
+        (cache_x, subcube_x) = divmod(x, subcube_cols)
         return np.concatenate(
-            [self.__getOrLoadSubcube(subcube_cache_t,
-                                     subcube_cache_y,
-                                     subcube_cache_x
+            [self.__getOrLoadSubcube(cache_t,
+                                     cache_y,
+                                     cache_x
                                     ).getTimeSeries(subcube_y, subcube_x)
-             for subcube_cache_t in range(subcube_cache_bands)]
+             for cache_t in range(cache_bands)]
         )
 
 
     # TODO: Add an optional spatial range
     def getSpatialPlane(self, t):
-        (_, subcube_cache_rows, subcube_cache_cols) = self.subcube_cache_shape
+        (_, cache_rows, cache_cols) = self.cache_shape
         (subcube_bands, _, _) = self.subcube_shape
-        (subcube_cache_t, subcube_t) = divmod(t, subcube_bands)
+        (cache_t, subcube_t) = divmod(t, subcube_bands)
         return np.block(
-            [[self.__getOrLoadSubcube(subcube_cache_t,
-                                      subcube_cache_y,
-                                      subcube_cache_x
+            [[self.__getOrLoadSubcube(cache_t,
+                                      cache_y,
+                                      cache_x
                                       ).getSpatialPlane(subcube_t)
-              for subcube_cache_x in range(subcube_cache_cols)]
-             for subcube_cache_y in range(subcube_cache_rows)]
-            )
+              for cache_x in range(cache_cols)]
+             for cache_y in range(cache_rows)]
+        )
 
 
     # NOTE: Ranges provide inclusion:inclusion semantics
     # NOTE: None and -1 cannot be passed in
     def getSubcube(self, t_start, t_stop, y_start, y_stop, x_start, x_stop):
         (subcube_bands, subcube_rows, subcube_cols) = self.subcube_shape
-        (subcube_cache_t_start, subcube_t_start) = divmod(t_start, subcube_bands)
-        (subcube_cache_t_stop,  subcube_t_stop)  = divmod(t_stop,  subcube_bands)
-        (subcube_cache_y_start, subcube_y_start) = divmod(y_start, subcube_rows)
-        (subcube_cache_y_stop,  subcube_y_stop)  = divmod(y_stop,  subcube_rows)
-        (subcube_cache_x_start, subcube_x_start) = divmod(x_start, subcube_cols)
-        (subcube_cache_x_stop,  subcube_x_stop)  = divmod(x_stop,  subcube_cols)
+        (cache_t_start, subcube_t_start) = divmod(t_start, subcube_bands)
+        (cache_t_stop,  subcube_t_stop)  = divmod(t_stop,  subcube_bands)
+        (cache_y_start, subcube_y_start) = divmod(y_start, subcube_rows)
+        (cache_y_stop,  subcube_y_stop)  = divmod(y_stop,  subcube_rows)
+        (cache_x_start, subcube_x_start) = divmod(x_start, subcube_cols)
+        (cache_x_stop,  subcube_x_stop)  = divmod(x_stop,  subcube_cols)
         return np.block(
-            [[[self.__getOrLoadSubcube(subcube_cache_t,
-                                       subcube_cache_y,
-                                       subcube_cache_x
+            [[[self.__getOrLoadSubcube(cache_t,
+                                       cache_y,
+                                       cache_x
                                        ).getSubcube(
-                                           subcube_t_start if subcube_cache_t == subcube_cache_t_start else 0,
-                                           subcube_t_stop  if subcube_cache_t == subcube_cache_t_stop  else subcube_bands - 1,
-                                           subcube_y_start if subcube_cache_y == subcube_cache_y_start else 0,
-                                           subcube_y_stop  if subcube_cache_y == subcube_cache_y_stop  else subcube_rows - 1,
-                                           subcube_x_start if subcube_cache_x == subcube_cache_x_start else 0,
-                                           subcube_x_stop  if subcube_cache_x == subcube_cache_x_stop  else subcube_cols - 1
+                                           subcube_t_start if cache_t == cache_t_start else 0,
+                                           subcube_t_stop  if cache_t == cache_t_stop  else subcube_bands - 1,
+                                           subcube_y_start if cache_y == cache_y_start else 0,
+                                           subcube_y_stop  if cache_y == cache_y_stop  else subcube_rows - 1,
+                                           subcube_x_start if cache_x == cache_x_start else 0,
+                                           subcube_x_stop  if cache_x == cache_x_stop  else subcube_cols - 1
                                        )
-               for subcube_cache_x in range(subcube_cache_x_start, subcube_cache_x_stop + 1)]
-              for subcube_cache_y in range(subcube_cache_y_start, subcube_cache_y_stop + 1)]
-             for subcube_cache_t in range(subcube_cache_t_start, subcube_cache_t_stop + 1)]
+               for cache_x in range(cache_x_start, cache_x_stop + 1)]
+              for cache_y in range(cache_y_start, cache_y_stop + 1)]
+             for cache_t in range(cache_t_start, cache_t_stop + 1)]
         )
 #+end_src
 
