--- a/org/pyretechnics.org
+++ b/org/pyretechnics.org
@@ -252,6 +252,9 @@ class SpaceTimeCube:
 
 
     def get(self, t, y, x):
+        """
+        Returns a scalar value.
+        """
         # Select value by spatio-temporal coordinate
         return self.data[t // self.t_repetitions,
                          y // self.y_repetitions,
@@ -261,6 +264,9 @@ class SpaceTimeCube:
     # NOTE: Ranges provide inclusion:inclusion semantics
     # NOTE: None and -1 cannot be passed in
     def getTimeSeries(self, t_range, y, x):
+        """
+        Returns a 1D array.
+        """
         # Destructure the argument range
         (t_start, t_stop) = t_range
         # Translate high-res coordinates to low-res coordinates
@@ -269,24 +275,25 @@ class SpaceTimeCube:
         y_chunk       = y       // self.y_repetitions
         x_chunk       = x       // self.x_repetitions
         # Select the array slice that completely contains all low-res coordinates
-        low_res_cube = self.data[t_start_chunk:(t_stop_chunk + 1),
+        low_res_time = self.data[t_start_chunk:(t_stop_chunk + 1),
                                  y_chunk,
                                  x_chunk]
         # Expand the low-res slice into a high-res slice
-        high_res_cube = maybe_repeat_array(low_res_cube, (0, self.t_repetitions))
+        high_res_time = maybe_repeat_array(low_res_time, (0, self.t_repetitions))
         # Translate high-res global coordinates to high-res slice coordinates
         t_chunk_origin = t_start_chunk * self.t_repetitions
         t_start_idx    = t_start - t_chunk_origin
         t_stop_idx     = t_stop  - t_chunk_origin
         # Select the array slice that matches the high-res slice coordinates
-        return high_res_cube[t_start_idx:(t_stop_idx + 1),
-                             0,
-                             0]
+        return high_res_time[t_start_idx:(t_stop_idx + 1)]
 
 
     # NOTE: Ranges provide inclusion:inclusion semantics
     # NOTE: None and -1 cannot be passed in
     def getSpatialPlane(self, t, y_range, x_range):
+        """
+        Returns a 2D array.
+        """
         # Destructure the argument ranges
         (y_start, y_stop) = y_range
         (x_start, x_stop) = x_range
@@ -297,14 +304,14 @@ class SpaceTimeCube:
         x_start_chunk = x_start // self.x_repetitions
         x_stop_chunk  = x_stop  // self.x_repetitions
         # Select the array slice that completely contains all low-res coordinates
-        low_res_cube = self.data[t_chunk,
-                                 y_start_chunk:(y_stop_chunk + 1),
-                                 x_start_chunk:(x_stop_chunk + 1)]
+        low_res_space = self.data[t_chunk,
+                                  y_start_chunk:(y_stop_chunk + 1),
+                                  x_start_chunk:(x_stop_chunk + 1)]
         # Expand the low-res slice into a high-res slice
-        high_res_cube = reduce(maybe_repeat_array,
-                               ((1, self.y_repetitions),
-                                (2, self.x_repetitions)),
-                               low_res_cube)
+        high_res_space = reduce(maybe_repeat_array,
+                                ((0, self.y_repetitions),
+                                 (1, self.x_repetitions)),
+                                low_res_space)
         # Translate high-res global coordinates to high-res slice coordinates
         y_chunk_origin = y_start_chunk * self.y_repetitions
         x_chunk_origin = x_start_chunk * self.x_repetitions
@@ -313,14 +320,16 @@ class SpaceTimeCube:
         x_start_idx    = x_start - x_chunk_origin
         x_stop_idx     = x_stop  - x_chunk_origin
         # Select the array slice that matches the high-res slice coordinates
-        return high_res_cube[0,
-                             y_start_idx:(y_stop_idx + 1),
-                             x_start_idx:(x_stop_idx + 1)]
+        return high_res_space[y_start_idx:(y_stop_idx + 1),
+                              x_start_idx:(x_stop_idx + 1)]
 
 
     # NOTE: Ranges provide inclusion:inclusion semantics
     # NOTE: None and -1 cannot be passed in
     def getSubcube(self, t_range, y_range, x_range):
+        """
+        Returns a 3D array.
+        """
         # Destructure the argument ranges
         (t_start, t_stop) = t_range
         (y_start, y_stop) = y_range
@@ -393,6 +402,9 @@ class SpaceTimeCube:
 
 
     def getFullyRealizedCube(self, cache=False):
+        """
+        Returns a 3D array.
+        """
         if hasattr(self, "cube"):
             return self.cube
         else:
